# commitxai

./: CONTRIBUTE.md  README.md  pyproject.toml  scope.md
clean dataset/: cpp_cleaned.jsonl  cs_cleaned.jsonl  go_cleaned.jsonl  java_cleaned.jsonl  js_cleaned.jsonl  py_cleaned.jsonl  rust_cleaned.jsonl
data/raw/: php_cleaned.jsonl
src/commitxai/: cli.py  config.py
src/commitxai/config/: settings.py
src/commitxai/utils/: __init__.py  common.py  git.py  git_utils.py  llm_models_utils.py
