[project]
name = "commitxai"
version = "0.1.0"
description = "CLI tool that generates commit messages based on staged files using LLM"
readme = "README.md"
authors = [
	{name="Adnan", email="etc.adnan@gmail.com"},
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "click>=8.1.8",
    "gitpython>=3.1.45",
    "huggingface-hub>=0.34.4",
    "llama-cpp-python>=0.3.16",
    "platformdirs>=4.3.8",
    "requests>=2.32.3",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
commitxai = "commitxai.cli:main"
